08Nov99=======================================================================
1. added spoofing (mk1 version) for sysops, useful for those little jobs like
reseting a user's qra locator and such like "spoof g7brn set/qra jo02lq".
2. fixed set/location so it stores the qra locator in the qra locator slot, 
NOT the lat/long (who wrote this stuff...?).
07Nov99=======================================================================
1. reduced the amount of stuff compared against for dup announces.
2. Check the regex for DK0WCY announces produces results before storing it as
a WWV.
3. Added some logging for set/priv (un)set/lockout.
4. Added test long path calc to sh/muf
5. Only wonder down the msg queue every minute
6. Put in the initial DB code (at last), you can create and remove local and
standard remote dbs, you can import AK1A style .FUL ascii databases, you can
enquire on a local or remote database.
7. A return ping to a node will clear down all outstanding pings to
that node (which might cause some confusion if more then one ping is
outstanding for a node, but then - shit happens).
04Nov99=======================================================================
1. Removed ~ from the end of the PC18.
2. Removed a hangover from duff character checking in cluster.pl
3. Stop PC frames that are to be routed, being routed back to themselves.
03Nov99=======================================================================
1. Simplified command caching so it uses anonymous subroutines, you should
also get error messages back on the console now when developing.
2. Allow locally connected AK1A clusters that for some obscure reason don't
issue PC19s to still appear as connected and allow them to acquire users.
31Oct99=======================================================================
1. updated Minimuf.pm and show/muf.pl to the fixed versions sent to me by
Steve Franke K9AN. 
2. Made set/badnodes work, added show/badnodes. This is an interim fix until